# envguard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release_notes.txt
.github/workflows/: ci.yml
src/envguard/: __init__.py  cli.py  config.py  fixer.py  groups.py  linter.py  reporter.py  secrets.py
tests/: test_cli.py  test_config.py  test_fixer.py  test_groups.py  test_linter.py  test_reporter.py  test_secrets.py
