[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "1.3.1"
description = "A linter and validator for .env files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "spydix"}]
keywords = ["env", "dotenv", "linter", "validator", "secrets", "ci", "pre-commit"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.scripts]
envguard = "envguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
